--- a/src/components/ProductRow.module.css
+++ b/src/components/ProductRow.module.css
@@ -11,9 +11,13 @@
  
 }
 .name{
-    width: 30%;
+    width: 70%;
     font-weight: bold;
     text-transform: uppercase;
-    font-size: .85rem;
+    font-size: .9rem;
+}
+.price, .time, .info{
+    width: 10%;
+    font-size: .7rem;
 }
 
