--- a/src/components/ProductRow.module.css
+++ b/src/components/ProductRow.module.css
@@ -11,13 +11,17 @@
  
 }
 .name{
-    width: 64%;
+    width: 70%;
     font-weight: bold;
     text-transform: uppercase;
-    font-size: .9rem;
+    font-size: .85rem;
 }
-.price, .time, .info{
-    width: 12%;
+.time, .info{
+    width: 10%;
     font-size: .65rem;
 }
+.price{
+    width: 20%;
+    font-size: .65rem;
+} 
 
