--- a/src/components/ProductModal.module.css
+++ b/src/components/ProductModal.module.css
@@ -32,7 +32,11 @@
 }
 .modalContent{
     position: relative;
-    padding-top: 50px;
+    padding-top: 50px;    
+}
+.modalContent p{
+    color: white;
+    font-size: 0.9rem;
 }
 
 .modalContent .cerrar{
