--- a/src/components/ProductRow.module.css
+++ b/src/components/ProductRow.module.css
@@ -1,27 +1,31 @@
-.product{
- display: flex;
- justify-content: space-between;
- align-items: center;
+.product {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
- border: 1px solid gray;
- padding: 1rem;
- border-radius: 10px;
- gap:5px;
- margin-top: 1rem;
- 
+  border: 1px solid gray;
+  padding: 1rem;
+  border-radius: 10px;
+  gap: 5px;
+  margin-top: 1rem;
 }
-.name{
-    width: 70%;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: .85rem;
+.name {
+  width: 70%;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 0.85rem;
 }
-.time, .info{
-    width: 10%;
-    font-size: .65rem;
+.time,
+.info {
+  width: 10%;
+  font-size: 0.65rem;
 }
-.price{
-    width: 20%;
-    font-size: .60rem;
-} 
-
+.price {
+  width: 15%;
+  font-size: 0.6rem;
+}
+.publico {
+  width: 5%;
+  font-size: 0.6rem;
+  color: red;
+}
