--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,11 @@
-@import './reset.css';
-@import './fonts.css';
+/* Oculta elementos en PDF */
+.pdf-hide {
+	display: none !important;
+}
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 
 
